Load config updates in chronological order